Fixed dropdown menu being overlapped

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -139,6 +139,15 @@ Drag and drop file explorer
   font-weight: bold;
 }
 
+
+/***
+  DROPDOWN
+  ***/
+.dropdown {
+  background: red;
+  z-index: 9999;
+}
+
 /***
   SPINNER
   ***/
